# trident-idl-spec

./: Cargo.toml  README.md
src/: lib.rs  spec.rs  utils.rs
