[package]
name = "trident-idl-spec"
authors = ["Ackee Blockchain Security <hello@ackee.xyz>"]
version = "0.0.2"
edition = "2021"
repository = "https://github.com/Ackee-Blockchain/trident-idl-spec"
license-file = "./LICENSE"
description = "Custom implementation of IDL specification for the Trident fuzzing framework."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2", features = ["visit", "full"] }
quote = "1"
